slider overflow fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4165,6 +4165,7 @@ video {
   max-width: 112em;
   margin: 0 auto;
   padding: 0;
+  width: 100%;
 }
 
 .layout-row > * {
@@ -4505,15 +4506,16 @@ video {
 }
 
 .main__image {
-  max-height: 37.5rem;
-  max-width: 37.5rem;
+  /* max-height: 37.5rem;
+  max-width: 37.5rem; */
   margin: 1rem;
+  width: 100%;
 }
 
 @media (max-width: 600px) {
   .main__image {
-    max-height: 27.5rem;
-    max-width: 27.5rem;
+    /* max-height: 27.5rem;
+    max-width: 27.5rem; */
   }
 }
 
